--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -28,8 +28,8 @@ div {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    margin: auto;
+    max-width: 800px;
+    /* margin: auto; */
   }
   
   form h2 {
@@ -65,4 +65,23 @@ div {
   
   form input[type="submit"]:hover {
     background-color: #0056b3;
+  }
+
+  .nav-font {
+    font-size: 20px;
+  }
+
+  .note-col{
+    padding: 3%;
+  }
+
+  .my-logo{
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .note-tab{
+    border-right: 1em;
   }
