--- a/frontend/src/styles/form.css
+++ b/frontend/src/styles/form.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-content: space-between; */
     justify-content: center;
     margin: 50px auto;
     padding: 20px;
